(Fixes): center align the logo on auth screen

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+    body{
+        font-family: 'PT Sans', sans-serif;
+    }
+}
+
 @layer components{
     .btn-primary{
         @apply my-6 w-full rounded-md bg-neutral-90 py-3 px-20 text-center font-roboto font-medium leading-6 text-white
